Let each loader ask the sound for its own stream
NeoForge patches getStream into SoundInstance and calls that instead of
SoundBufferLibrary#getStream, so the mixin wrapping the latter had no
target there and, with defaultRequire, took the client down on startup.
Both loaders can ask an instance for its stream, so use what they offer:
fabric-sound-api-v1 on one side, the patched method on the other. The
mixin keeps only the pool choice, which neither of them exposes.

The engine also takes a future and holds a channel while it waits,
letting the channel go if the emote ends first, so hand it the decode
instead of polling every 500 ms until the PCM is there. Where to start
is read once the PCM lands, so a long track no longer joins as far
behind as its decode took.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>